fix css set a max-height on contact img, + center its container alignment

--- a/public/css/content.css
+++ b/public/css/content.css
@@ -249,7 +249,7 @@ ul#nav-gallery-art-icon {
 #contact__container {
   display: flex;
   flex-flow: row;
-  justify-content: left;
+  justify-content: center;
   gap: 10%;
   text-align: center;
   flex-wrap: wrap;
@@ -268,6 +268,8 @@ ul#nav-gallery-art-icon {
   width: 100%;
   height: auto;
   aspect-ratio: 700 /800;
+  max-height: 50vh;
+
 }
 #contact__container img:hover {
   background-color: rgba(151, 131, 180, 0.8);
